syntax = "proto3";

package customer;

option go_package = "github.com/Nulandmori/micorservices-pattern/services/customer/proto";


service CustomerService {
    rpc CreateCustomer(CreateCustomerRequest) returns (CreateCustomerResponse);
    rpc GetCustomer(GetCustomerRequest) returns (GetCustomerResponse);
}

  message CreateCustomerRequest {
    string name = 1;
  }

  message CreateCustomerResponse {
    Customer customer = 1;
  }

  message GetCustomerRequest {
    string id = 1;
  }

  message GetCustomerResponse {
    Customer customer = 1;
  }

  message Customer {
    string id = 1;
    string name = 2;
  }
